[package]
name = "safe-once-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colosseum = "0.2.2"
lock_api = "0.4.9"
#safe-once = { git = "https://github.com/nathdobson/safe-once.git", rev = "8945591bce5c7b441f81b9cf536c126b48f0aca2", features = [] }
safe-once = { path = "../safe-once" }
parking_lot = { version = "0.12.1", optional = true }
cache-padded = "1.2.0"

[dev-dependencies]
dashmap = "5.4.0"
itertools = "0.10.5"
chashmap = "2.2.2"
concurrent-map = "5.0.6"
rand = { version = "0.8.5", features = ["small_rng"] }
statistical = "1.0.0"
linreg = "0.2.0"

[features]
default = ["sync", "unsync"]
unsync = ["safe-once/unsync"]
sync = ["safe-once/sync", "parking_lot"]

