[package]
name = "safe-once-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lock_api = "0.4.9"
safe-once = { path = "../safe-once", features = [] }
parking_lot = { version = "0.12.1" }

[dev-dependencies]
dashmap = "5.4.0"
itertools = "0.10.5"
chashmap = "2.2.2"
concurrent-map = "5.0.6"
rand = { version = "0.8.5", features = ["small_rng"] }
statistical = "1.0.0"
linreg = "0.2.0"
